# pseudonym-se

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  poetry.toml  pyproject.toml  test.py
clients/: client.py  client2.py  hashes.py
clients/backend/: aliases.py  api.py  client.py  constants.py  db.py  hashes.py  models.py  se.py  util.py
clients/frontend/: .env  index.html  main.css  main.html  main.js  package-lock.json  package.json  requests.js
databases/: docker-compose.yaml
docker/clients/: Dockerfile
docker/clients/frontend/: Dockerfile
docker/management/: Dockerfile
docker/management/frontend/: Dockerfile
docker/vault/: Dockerfile
management/: user-manager.py  user_manager.py
management/backend/: aliases.py  constants.py  user_manager.py
management/frontend/: index.html  main.html  main.js  package-lock.json  package.json  requests.js
pseudonym-service/vault/: api.py  hashes.py
service/vault/: api.py
src/clients/backend/: aliases.py  api.py  constants.py  hashes.py  se.py  util.py
src/docker/vault/: Dockerfile
src/vault/: aliases.py  api.py  hashes.py  models.py  pseudonyms.py  se.py
test/: __init__.py  performance_test.py  se_test.py  test.py
test/loadtests/: locustfile.py
test/performance-per-line/: line_performance.py
tests/: performance_test.py  se_test.py  template_system.py
tests/loadtests/: locustfile.py
tests/performance-per-line/: line_performance.py
user-managment/: user-manager.py
vault/: Dockerfile  aliases.py  api.py  constants.py  db.py  hashes.py  models.py  pseudonyms.py  se.py
(+9 files in other folders)
