[tool.poetry]
name = "pseudonym-se"
version = "0.0.1"
description = ""
authors = ["Jeremy Herbst"]
license = "MIT"
readme = "README.md"
packages = [{include = "pseudonym_se"}]

[tool.poetry.dependencies]
python = "^3.7.2"
fastapi = "^0.83.0"
redis = "^4.3.4"
requests = "^2.28.1"
uvicorn = "^0.18.3"
python-dotenv = "^0.21.0"

[tool.poetry.group.charm.dependencies]
charm-crypto = {path = "../charm"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.3"
black = "^22.8.0"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
